<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="14dp"
    android:background="#F5F5F6" >
    
    <LinearLayout
        style="@style/StandardWidthBox" >
    
	    <LinearLayout
	        style="@style/StandardWidthBox"
	        android:orientation="horizontal" >
	        
	        <LinearLayout 
	            style="@style/WrappedBox"
	            android:orientation="vertical" >
	            
	            <TextView 
	                style="@style/WrappedBox"
	                android:id="@+id/day_of_month_textview"
	                android:text="@string/test_day_of_month"
	                android:textSize="32sp"
	                android:textColor="#818181" />
	            
	            <TextView 
	                style="@style/WrappedBox"
	                android:id="@+id/month_of_year_textview"
	                android:text="@string/test_month_of_year"
	                android:textSize="32sp"
	                android:textColor="#8ED030" />
	        </LinearLayout>
	            
	            <TextView
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content" 
	                android:id="@+id/job_title_textview"
	                android:textSize="20sp"
	                android:textColor="#595759"
	                android:paddingLeft="6dp"
	                android:lineSpacingExtra="1dp"
	                android:text="@string/test_job_title" />
	            
	    </LinearLayout>
	    
	    <TextView
	        style="style/StandardWidthBox"
	        android:paddingTop="12dp"
	        android:text="@string/section_title_details" />
	    
	    <LinearLayout
	        style="@style/JobDetailBox" >
	        
	        <TextView
				style="@style/JobDetailItemTop"
	            android:id="@+id/job_time_textview"
	            android:text="@string/test_job_time" />
	        
	        <TextView
	            style="@style/JobDetailItem"
	            android:id="@+id/job_location_textview"
	            android:text="@string/test_job_location" />
	        
	        <TextView
	            style="@style/JobDetailItem"
	            android:id="@+id/job_wage_textview"
	            android:text="@string/test_job_wage" />
	        
	        <!-- Need to add drawableLeft's -->
	        
	    </LinearLayout>
	    
		<TextView 
		    style="@style/JobDetailSectionTitle"
		    android:text="@string/section_title_description"/>
	
		<TextView
		    style="@style/JobDetailFullBox"
		    android:id="@+id/job_description_textview"
		    android:text="@string/test_job_description" />
		
	    <TextView 
	        style="@style/JobDetailSectionTitle"
	        android:text="@string/section_title_employer_information" />
	    
	    <LinearLayout 
	        style="@style/JobDetailBox" >
	        
		    <TextView 
		        style="@style/JobDetailItemTop"
		        android:id="@+id/employer_name_textview"
		        android:textColor="#88D816"
		        android:text="@string/test_employer_name" />
		    
		    <TextView
		        style="@style/JobDetailItem"
		        android:id="@+id/employer_address_textview"
		        android:text="@string/test_employer_address" />
		    
		    <!-- need to add drawableLeft of employer address -->
		    
	    </LinearLayout>
	    
	    <TextView 
	        style="@style/JobDetailSectionTitle"
	        android:text="@string/section_title_tags" />
	    
	    <TextView
	        style="@style/JobDetailFullBox"
		    android:id="@+id/job_tags_textview"
		    android:text="@string/test_tags" />
	    
	    <TextView 
	        style="@style/StandardWidthBox"
		    android:id="@+id/application_open_or_closed_textview"
		    android:text="@string/test_application_open"
		    android:gravity="center_horizontal"
		    android:textColor="#8ED030"
		    android:paddingTop="24dp" />
	    
	    <TextView 
	        style="@style/JobDetailItem"
		    android:id="@+id/days_left_to_apply_textview"
		    android:text="@string/test_4_days_to_apply"
		    android:gravity="center_horizontal"
		    android:paddingBottom="24dp" />
	    
	    <Button 
			style="@style/GreenButton"
		    android:id="@+id/apply_button"
		    android:text="@string/test_apply_now_button_text"  />
	
	</LinearLayout>

</ScrollView>
