<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	 android:layout_width="match_parent"
	 android:layout_height="match_parent"
	 android:padding="24sp"
	 android:gravity="center_horizontal"
	 android:orientation="vertical"
	 android:background="#F2F2F2" >
	 
	 <TextView
		style="@style/PageTitle"
		android:text="@string/signup_page_title" />
    
	 <Button
	    style="@style/FacebookButton"
		android:id="@+id/signup_with_facebook_button"
		android:text="@string/signup_with_facebook_button_text" />
  
	 <TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:padding="12sp"
		android:textColor="#D8D8D8"
		android:text="@string/or_divider_text" />
  
	<EditText
	    style="@style/TextBox"
		android:id="@+id/signup_email_field"
		android:hint="@string/email_textbox_text"
		android:inputType="textEmailAddress" />
  
	<EditText
	    style="@style/TextBox"
	    android:id="@+id/signup_password_field"
	    android:hint="@string/password_textbox_text"
	    android:inputType="textPassword" />
	
	<LinearLayout
	    style="@style/StandardWidthBox"
	    android:orientation="horizontal" >
	    
	    <EditText
			style="@style/HalfWidthTextBox"
			android:id="@+id/signup_first_name_field"
			android:hint="@string/first_name_textbox_text" />
	    
	    <EditText
	        style="@style/HalfWidthTextBox"
			android:id="@+id/signup_last_name_field"
			android:hint="@string/last_name_textbox_text" />
	    
	</LinearLayout>
	
	<View
	    android:layout_width="match_parent"
	    android:layout_height="32sp" />
	
	<Button
	    style="@style/GreenButton"
	    android:id="@+id/signup_button"
	    android:text="@string/signup_button_text" />
	
	
	<TextView
		style="@style/StandardWidthBox"
		android:id="@+id/already_have_account_text_view"
		android:padding="24dp"
		android:text="@string/already_have_account_button_text" />


</LinearLayout>
