<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	 android:layout_width="match_parent"
	 android:layout_height="match_parent"
	 android:padding="24sp"
	 android:gravity="center_horizontal"
	 android:orientation="vertical"
	 android:background="#F2F2F2" >
  
	 <TextView
		style="@style/PageTitle"
		android:text="@string/login_page_title" />
    
	 <Button
	    style="@style/FacebookButton"
		android:id="@+id/login_with_facebook_button"
		android:text="@string/login_with_facebook_button_text" />
  
	 <TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:padding="12sp"
		android:textColor="#D8D8D8"
		android:text="@string/or_divider_text" />
  
	<EditText
	    style="@style/TextBox"
		android:id="@+id/login_email_field"
		android:hint="@string/email_textbox_text"
		android:inputType="textEmailAddress" />
  
	<EditText
	    style="@style/TextBox"
		 android:id="@+id/login_password_field"
		 android:hint="@string/password_textbox_text"
		 android:inputType="textPassword" />
	
	<View
	    android:layout_width="match_parent"
	    android:layout_height="16sp" />
  
	<Button
	    style="@style/GreenButton"
	    android:id="@+id/login_button"
	    android:text="@string/login_button_text" />
  
	<TextView
	    style="@style/StandardWidthBox"
		android:id="@+id/forgot_password_text_view"
		android:padding="24dp"
		android:text="@string/forgot_password_button_text" />

	<TextView
	    style="@style/StandardWidthBox"
		android:id="@+id/dont_have_an_account_text_view"
		android:paddingTop="50sp"
		android:text="@string/dont_have_an_account_button_text" />
	
</LinearLayout>