<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="24sp" >
    
        <View
		    android:layout_width="match_parent"
		    android:layout_height="84sp" />
    
        <TextView
	        style="@style/StandardWidthBox"
	        android:gravity="center"
	        android:text="@string/forgot_password_page_text" />
        
        <View
		    android:layout_width="match_parent"
		    android:layout_height="16sp" />
        
        <EditText
            style="@style/TextBox" 
            android:id="@+id/forgot_password_page_email_field"
			android:hint="@string/email_textbox_text"
			android:inputType="textEmailAddress" />
        
        <View
		    android:layout_width="match_parent"
		    android:layout_height="16sp" />
        
        <Button
            style="@style/GreenButton"
            android:id="@+id/reset_password_button"
			android:text="@string/reset_password_button_text" />

</LinearLayout>
